# NpuDetectorLib

./: CMakeLists.txt  LICENSE  README.md  common.cmake  get_sources.sh
include/: npu.hpp  npu_base_impl.hpp  npu_factory.hpp  npu_yolo_impl.hpp  npu_yolov8_pose_impl.hpp  yolov8_common.hpp  yolov8_postprocess.hpp  yolov8pose_postprocess.hpp  yolov8seg_postprocess.hpp
include/MultiNetworkPipeline/: MultiNetworkPipeline.hpp  README.md
include/MultiNetworkPipeline/Utils/: SharedQueue.hpp  Timer.hpp
include/MultiNetworkPipeline/Utils/counter-master/: Counter.h
include/common/: nms.hpp
models/: yolov5s.json  yolov8s.json  yolov8s_nms.json  yolov8s_pose.json  yolov8s_seg.json
src/: CMakeLists.txt  npu_base_impl.cpp  npu_factory.cpp  npu_yolo_impl.cpp  npu_yolov8_impl.cpp  npu_yolov8_pose_impl.cpp  npu_yolov8_seg_impl.cpp
src/MultiNetworkPipeline/: MultiNetworkPipeline.cpp
src/include/: common.hpp  npu_base_impl.hpp  npu_yolov8_impl.hpp  npu_yolov8_seg_impl.hpp  yolo_nms_decoder.hpp  yolov8pose_postprocess.hpp
src/include/common/: hailo_tensors.hpp  math.hpp  tensors.hpp
src/yolov8/: math.cpp  nms.cpp  tensors.cpp  yolov8_common.cpp  yolov8_postprocess.cpp  yolov8pose_postprocess.cpp  yolov8seg_postprocess.cpp
tests/: CMakeLists.txt  main.cpp
